# shippr

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml  test.yml
src/: command.rs  config.rs  deploy_config.rs  error.rs  io.rs  lib.rs  main.rs
src/actions/: check.rs  cleanup.rs  cluster.rs  deploy.rs  init.rs  mod.rs  undeploy.rs  values.rs
src/actions/cleanup/: action.rs  mod.rs  model.rs
src/actions/cluster/: list.rs  mod.rs  set.rs
test_charts/nginx/: Chart.yaml  values.yaml
test_charts/nginx/templates/: deployment.yaml
test_charts/releases/nginx-release/: deployment.yaml  values-default.yaml  values-test.yaml
test_charts/releases/nginx_release/: deployment.yaml  values-default.yaml  values-test.yaml
