[package]
name = "shippr"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.5", features = [ "derive" ] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.15.0"
