[package]
name = "shippr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
yaml-rust2 = "0.10"
log = "0.4.25"

[dev-dependencies]
tempfile = "3.15.0"
rstest = "0.24"
